fix(newletter): fixed button alignment

--- a/src/components/sections/Newletter/styles.scss
+++ b/src/components/sections/Newletter/styles.scss
@@ -37,7 +37,6 @@
   .Content2 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     margin-left: 16px;
 
     button {
@@ -136,11 +135,11 @@
     .Content2 {
       display: flex;
       flex-direction: column;
-      justify-content: center;
 
       button {
         width: 115px;
         height: 40px;
+        margin-top: auto;
         font-size: 16px;
         font-style: normal;
         font-weight: 600;
